--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectKey=react
-sonar.projectName=react
-sonar.projectVersion=1.0
-sonar.sources=src
-sonar.host.url=http://54.206.177.99:9000
-sonar.password=sqa_1c37808bf8903769902db4777e7207d2331b18e8
+#sonar.projectName=react
+#sonar.projectVersion=1.0
+#sonar.sources=src
+#sonar.host.url=http://54.206.177.99:9000
+#sonar.password=sqa_1c37808bf8903769902db4777e7207d2331b18e8
 
 
 
