--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,6 @@
-#sonar.projectKey=react
-#sonar.projectName=react
+#sonar.projectKey=mynewprojforgit
+#sonar.projectName=mynewprojforgit
 #sonar.projectVersion=1.0
 #sonar.sources=src
-#sonar.host.url=http://3.27.126.172:9000
-#sonar.password=sqa_ec42776142b13d50fa6aea5969a5ec652073d32f
-
-
-
+#sonar.host.url=http://65.0.94.218:9000 \
+#sonar.password=sqp_81eaf243d092b37675a466efcd0abee3233b6d81
