--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,5 @@
 #sonar.projectName=mynewprojforgit
 #sonar.projectVersion=1.0
 #sonar.sources=src
-#sonar.host.url=http://65.0.94.218:9000 \
+#sonar.host.url=http://65.0.94.218:9000
 #sonar.password=sqp_81eaf243d092b37675a466efcd0abee3233b6d81
