--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,18 +1,26 @@
-name: SonarQube Analysis
-
+name: Build
 on:
-  pull_request:
+  push:
     branches:
-      - qa
-
+      - qa # or the name of your main branch
 jobs:
-  sonar:
-    name: SonarQube Analysis
+  build:
+    name: Build
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST }}
+      #If you wish to fail your job when the Quality Gate is red, uncomment the
+      # following lines. This would typically be used to fail a deployment.
+      # - uses: sonarsource/sonarqube-quality-gate-action@master
+      #   timeout-minutes: 5
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: Cache SonarQube scanner
         uses: actions/cache@v3
