--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,26 +1,23 @@
-name: Build
+name: SonarQube Analysis
+
 on:
-  push:
+  pull_request:
     branches:
-      - qa # or the name of your main branch
+      - qa
+
 jobs:
-  build:
-    name: Build
+  sonar:
+    name: SonarQube Analysis
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK
+        uses: actions/setup-java@v3
         with:
-          fetch-depth: 0
-      - uses: sonarsource/sonarqube-scan-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      #If you wish to fail your job when the Quality Gate is red, uncomment the
-      # following lines. This would typically be used to fail a deployment.
-      # - uses: sonarsource/sonarqube-quality-gate-action@master
-      #   timeout-minutes: 5
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          java-version: '17' # Adjust if using a different JDK version
 
       - name: Cache SonarQube scanner
         uses: actions/cache@v3
@@ -28,8 +25,9 @@ jobs:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-sonar
-            
+            ${{ runner.os }}-sonar-
+
+
       - name: Run SonarQube Scan
         run: |
           sonar-scanner \
