--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -11,17 +11,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - uses: sonarsource/sonarqube-scan-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      #If you wish to fail your job when the Quality Gate is red, uncomment the
-      # following lines. This would typically be used to fail a deployment.
-      # - uses: sonarsource/sonarqube-quality-gate-action@master
-      #   timeout-minutes: 5
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
       - name: Cache SonarQube scanner
         uses: actions/cache@v3
         with:
@@ -34,15 +23,15 @@ jobs:
         run: |
           sonar-scanner \
               -Dsonar.projectKey=my-project \
-             -Dsonar.sources=. \
-              -Dsonar.host.url=http://localhost:9000 \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+              -Dsonar.sources=. \
+              -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+              -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
       - name: Check SonarQube Quality Gate
         id: quality_gate
         run: |
           QUALITY_GATE_STATUS=$(curl -s -u ${{ secrets.SONAR_TOKEN }} \
-            "https://sonarcloud.io/api/qualitygates/project_status?projectKey=my-project" \
+            "${{ secrets.SONAR_HOST_URL }}/api/qualitygates/project_status?projectKey=my-project" \
             | jq -r '.projectStatus.status')
           
           if [ "$QUALITY_GATE_STATUS" != "OK" ]; then
