--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,44 +1,46 @@
-name: Build
-on:
-  push:
-    branches:
-      - qa # or the name of your main branch
-jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-    
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17' # Adjust if using a different JDK version
+name: SonarQube Analysis
 
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          
+on:
+  pull_request:
+    branches:
+      - qa
+
+jobs:
+  sonar:
+    name: SonarQube Analysis
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Cache SonarQube scanner
         uses: actions/cache@v3
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-sonar
-            
+            ${{ runner.os }}-sonar-
+
+      - name: Install SonarQube Scanner
+        run: |
+          curl -sSLo sonar-scanner-cli.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
+          unzip sonar-scanner-cli.zip
+          export PATH="$PATH:$(pwd)/sonar-scanner-4.8.0.2856-linux/bin"
+
       - name: Run SonarQube Scan
         run: |
           sonar-scanner \
               -Dsonar.projectKey=my-project \
-              -Dsonar.sources=. \
-              -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
-              -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+             -Dsonar.sources=. \
+              -Dsonar.host.url=http://localhost:9000 \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
       - name: Check SonarQube Quality Gate
         id: quality_gate
         run: |
           QUALITY_GATE_STATUS=$(curl -s -u ${{ secrets.SONAR_TOKEN }} \
-            "${{ secrets.SONAR_HOST_URL }}/api/qualitygates/project_status?projectKey=my-project" \
+            "https://sonarcloud.io/api/qualitygates/project_status?projectKey=my-project" \
             | jq -r '.projectStatus.status')
           
           if [ "$QUALITY_GATE_STATUS" != "OK" ]; then
