--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -35,7 +35,7 @@ jobs:
           sonar-scanner \
               -Dsonar.projectKey=my-project \
              -Dsonar.sources=. \
-              -Dsonar.host.url=http://localhost:9000 \
+              -Dsonar.host.url=http://3.109.143.164
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
       - name: Check SonarQube Quality Gate
