--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -2,7 +2,7 @@ name: Build
 on:
   push:
     branches:
-      - qa # or the name of your main branch
+      - master # or the name of your main branch
 jobs:
   build:
     name: Build
@@ -15,37 +15,9 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      #If you wish to fail your job when the Quality Gate is red, uncomment the
+      # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
       # - uses: sonarsource/sonarqube-quality-gate-action@master
       #   timeout-minutes: 5
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-      - name: Cache SonarQube scanner
-        uses: actions/cache@v3
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-sonar
-            
-      - name: Run SonarQube Scan
-        run: |
-          sonar-scanner \
-              -Dsonar.projectKey=my-project \
-             -Dsonar.sources=. \
-              -Dsonar.host.url=http://3.109.143.164
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-
-      - name: Check SonarQube Quality Gate
-        id: quality_gate
-        run: |
-          QUALITY_GATE_STATUS=$(curl -s -u ${{ secrets.SONAR_TOKEN }} \
-            "https://sonarcloud.io/api/qualitygates/project_status?projectKey=my-project" \
-            | jq -r '.projectStatus.status')
-          
-          if [ "$QUALITY_GATE_STATUS" != "OK" ]; then
-            echo "SonarQube Quality Gate failed"
-            exit 1
-          fi
